CategoryManager sınıfı açıldı, Get All ve Add metodu yazıldı.

--- a/BilgeAdam.Business/BilgeAdam.Business.csproj
+++ b/BilgeAdam.Business/BilgeAdam.Business.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Manager\AdminUserManager.cs" />
+    <Compile Include="Manager\CategoryManager.cs" />
     <Compile Include="Manager\ProductManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
