--- a/BilgeAdam.UI.Web/BilgeAdam.UI.Web.csproj
+++ b/BilgeAdam.UI.Web/BilgeAdam.UI.Web.csproj
@@ -122,6 +122,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Category\" />
     <Folder Include="Views\Product\" />
   </ItemGroup>
   <ItemGroup>
