--- a/BilgeAdam.UI.Web/BilgeAdam.UI.Web.csproj
+++ b/BilgeAdam.UI.Web/BilgeAdam.UI.Web.csproj
@@ -100,11 +100,13 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AdminUserController.cs" />
+    <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\VM\AdminUserVM.cs" />
+    <Compile Include="Models\VM\CategoryVM.cs" />
     <Compile Include="Models\VM\ProductVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
