--- a/BilgeAdam.UI.Web/BilgeAdam.UI.Web.csproj
+++ b/BilgeAdam.UI.Web/BilgeAdam.UI.Web.csproj
@@ -99,12 +99,14 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AdminUserController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
+    <Compile Include="Controllers\SupplierController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\VM\AdminUserVM.cs" />
     <Compile Include="Models\VM\KategoriDrpVM.cs" />
     <Compile Include="Models\VM\ProductVM.cs" />
+    <Compile Include="Models\VM\SupplierVM.cs" />
     <Compile Include="Models\VM\UrunVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -114,6 +116,7 @@
     <Content Include="Views\AdminUser\Index.cshtml" />
     <Content Include="Views\AdminUser\AddAdminUser.cshtml" />
     <Content Include="Views\Product\UrunEkle.cshtml" />
+    <Content Include="Views\Supplier\AddSupplier.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
