login işlemleri base controller

--- a/BilgeAdam.Business/BilgeAdam.Business.csproj
+++ b/BilgeAdam.Business/BilgeAdam.Business.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Manager\CategoryManager.cs" />
     <Compile Include="Manager\ProductManager.cs" />
     <Compile Include="Manager\SupplierManager.cs" />
+    <Compile Include="Manager\WebUserManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
