--- a/BilgeAdam.UI.Web/Web.config
+++ b/BilgeAdam.UI.Web/Web.config
@@ -23,6 +23,11 @@
       </system.Web>
   -->
   <system.web>
+    
+    <authentication mode="Forms">
+      <forms loginUrl="/Login/Index"></forms>
+    </authentication>
+    
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
   </system.web>
