--- a/BilgeAdam.Business/BilgeAdam.Business.csproj
+++ b/BilgeAdam.Business/BilgeAdam.Business.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="Manager\AdminUserManager.cs" />
     <Compile Include="Manager\CategoryManager.cs" />
+    <Compile Include="Manager\GenericBilgeAdam.cs" />
     <Compile Include="Manager\ProductManager.cs" />
     <Compile Include="Manager\SupplierManager.cs" />
     <Compile Include="Manager\WebUserManager.cs" />
