--- a/BilgeAdam.Business/BilgeAdam.Business.csproj
+++ b/BilgeAdam.Business/BilgeAdam.Business.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Manager\SupplierManager.cs" />
     <Compile Include="Manager\WebUserManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\GenericRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BilgeAdam.Data\BilgeAdam.Data.csproj">
