--- a/BilgeAdam.UI.Web/packages.config
+++ b/BilgeAdam.UI.Web/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
-  <package id="jQuery" version="1.6.4" targetFramework="net452" />
+  <package id="bootstrap" version="3.0.0" targetFramework="net452" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="jQuery" version="1.10.2" targetFramework="net452" />
+  <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR" version="2.4.1" targetFramework="net452" />
@@ -10,10 +12,12 @@
   <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.4.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.Owin" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
+  <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
 </packages>
