--- a/PROJE_ASLIACAROZ/PROJE_ASLIACAROZ.csproj
+++ b/PROJE_ASLIACAROZ/PROJE_ASLIACAROZ.csproj
@@ -94,11 +94,26 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Areas\Admin\Context\CSS\all.min.css" />
+    <Content Include="Areas\Admin\Context\CSS\jquery.min.js" />
+    <Content Include="Areas\Admin\Context\CSS\sb-admin-2.min.css" />
+    <Content Include="Areas\Admin\Context\Fonts\fa-brands-400.svg" />
+    <Content Include="Areas\Admin\Context\Fonts\fa-regular-400.svg" />
+    <Content Include="Areas\Admin\Context\Fonts\fa-solid-900.svg" />
+    <Content Include="Areas\Admin\Context\IMG\undraw_posting_photo.svg" />
     <Content Include="Global.asax" />
+    <Content Include="Scripts\bootstrap.bundle.min.js" />
+    <Content Include="Scripts\jquery.easing.min.js" />
+    <Content Include="Scripts\jquery.min.js" />
+    <Content Include="Scripts\sb-admin-2.min.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
+    <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
+    <Compile Include="Areas\Admin\Controllers\LoginController.cs" />
+    <Compile Include="Areas\Admin\Models\DTO\LoginModel.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -116,6 +131,22 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
+    <Content Include="Areas\Admin\Views\web.config" />
+    <Content Include="Areas\Admin\Views\Login\Index.cshtml" />
+    <Content Include="Areas\Admin\Context\Fonts\fa-brands-400.eot" />
+    <Content Include="Areas\Admin\Context\Fonts\fa-brands-400.ttf" />
+    <Content Include="Areas\Admin\Context\Fonts\fa-brands-400.woff" />
+    <Content Include="Areas\Admin\Context\Fonts\fa-brands-400.woff2" />
+    <Content Include="Areas\Admin\Context\Fonts\fa-regular-400.eot" />
+    <Content Include="Areas\Admin\Context\Fonts\fa-regular-400.ttf" />
+    <Content Include="Areas\Admin\Context\Fonts\fa-regular-400.woff" />
+    <Content Include="Areas\Admin\Context\Fonts\fa-regular-400.woff2" />
+    <Content Include="Areas\Admin\Context\Fonts\fa-solid-900.eot" />
+    <Content Include="Areas\Admin\Context\Fonts\fa-solid-900.ttf" />
+    <Content Include="Areas\Admin\Context\Fonts\fa-solid-900.woff" />
+    <Content Include="Areas\Admin\Context\Fonts\fa-solid-900.woff2" />
+    <Content Include="Areas\Admin\Views\Home\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\AdminLayout.cshtml" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
